<?xml version="1.0"?>
<package>
  <name>iit-iiwa-ros-pkg</name>
  <version>0.1.0</version>
  <description>The iwa_description package contains the model of a KUKA IIWA 7/14 arm.</description>

  <maintainer email="cjrosale@gmail.com">Carlos J. Rosales</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
